@@ -150,6 +150,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 <Module "Krang::CGI::MyPref">
   changed_password              "New password saved."
   changed_search_page_size      "'Search Results/Page' Updated."  
+  force_password_change         "More than $days days have passed since you last changed your password. You must create a new one before you can continue."
 </Module>
 
 <Module "Krang::CGI::MyAlerts">
@@ -308,7 +309,9 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 </Module>
 
 <Module "Krang::PasswordHandler">
-  error_password_length "Password must be at least 6 characters long."
+  password_too_short        "Password must be at least 6 characters long."
+  password_currently_used   "That is your current password. No update required."
+  password_used_recently    "You have used this password recently. Please use another one."
 </Module>
 
 
